@@ -16,10 +16,13 @@ remove = Test::More
 
 [Prereqs]
 Acme::Alien::DontPanic                         = 0.006
-Acme::Ford::Prefect                            = 0.006
+Acme::Ford::Prefect                            = 0.01
+Acme::Ford::Prefect::FFI                       = 0.006
 Alien::Base                                    = 0.005
 Alien::bz2                                     = 0.12
 Alien::bz2::Installer                          = 0.03
+Alien::Editline                                = 0.01
+Alien::FFI                                     = 0.01
 Alien::Libarchive                              = 0.21
 Alien::Libarchive::Installer                   = 0.08
 Alien::MSYS                                    = 0.07
